# Python-Science-Parking-Management-System

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
DS/: app.py  app_old.ipynb  cv-project-final.ipynb  predict.ipynb  predict_num.py
DS/parking_service/: admin.py  apps.py  models.py
adminapp/: decorators.py  forms.py  urls.py  views.py
bot/: apps.py  bot.py  handlers.py  keyboards.py  text.py
config/: settings.py  urls.py
finance/: forms.py  models.py  urls.py  views.py
finance/migrations/: 0001_initial.py  0002_alter_tariff_end_date_alter_tariff_start_date.py  0003_tariff_description.py  0004_rename_parking_session_id_payment_parking_session_pk.py  0005_payment_current_tariff.py  0006_payment_full_hours.py  0007_alter_payment_full_hours.py  0008_account.py  0009_alter_account_balance.py  0010_payment_payment_type.py  0011_payment_user_alter_payment_payment_type.py  0012_payment_is_confirmed.py  0013_remove_payment_is_confirmed_payment_status.py
parking_service/: admin.py  apps.py  forms.py  models.py  temp_py.py  urls.py  utils.py  views.py
parking_service/migrations/: 0001_initial.py  0002_licenseplate_user.py  0002_remove_licenseplate_accuracy.py  0003_remove_licenseplate_user_vehicle.py  0004_alter_vehicle_plate_number.py  0005_remove_licenseplate_accuracy_parkingsession.py  0006_alter_vehicle_user.py  0007_alter_parkingsession_end_at.py  0008_vehicle_is_blocked.py  0009_alter_parkingsession_end_at.py  0010_alter_parkingsession_end_at.py  0011_parkingsession_parking_duration.py  0012_alter_parkingsession_vehicle_delete_vehicle.py  0013_alter_parkingsession_status.py  0014_alter_parkingsession_vehicle.py  0015_parkingsession_vehicle_plate_number.py  0016_alter_parkingsession_status_parkingspot_and_more.py  0016_alter_parkingsession_vehicle_plate_number.py  0017_alter_parkingsession_vehicle_plate_number.py  0017_remove_parkingspot_spot_number_alter_parkingspot_id.py  0018_alter_parkingsession_vehicle_plate_number.py  0018_alter_parkingspot_options_and_more.py  0019_alter_parkingsession_vehicle_plate_number.py  0020_merge_20240729_0725.py  0021_alter_parkingsession_vehicle_plate_number.py
parking_service/templates/: upload.html
plate_recognition/: apps.py  forms.py  models.py  predict.ipynb  predict_num.py  service_predict.py  urls.py  views.py
plate_recognition/migrations/: 0001_initial.py
src/: settings.py  urls.py
src/config/: settings.py
users/: decorators.py  forms.py  middleware.py  models.py  serializers.py  tokens.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_groups_customuser_is_staff_and_more.py  0002_userrole_is_operator.py  0003_delete_table3.py  0004_userrole_is_operator.py  (+3 more)
vehicles/: forms.py  models.py  urls.py  utils.py  views.py
(+54 files in other folders)
