[tool.poetry]
name = "python-science-parking-management-system"
version = "0.1.0"
description = "Parking management system based on a computer vision model"
authors = ["Vitalii Savenko <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
django = "^5.0.7"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
six = "^1.16.0"
aiogram = "^3.10.0"
keras = "^3.4.1"
matplotlib = "^3.9.1"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.1"
tensorflow-io-gcs-filesystem = "^0.31.0"
tensorflow-cpu = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
