[tool.poetry]
name = "python-science-parking-management-system"
version = "0.1.0"
description = "Parking management system based on a computer vision model"
authors = ["Vitalii Savenko <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
django = "^5.0.7"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
six = "^1.16.0"
aiogram = "^3.10.0"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
tensorflow-io-gcs-filesystem = [
    { version = "^0.31", markers = "sys_platform == 'win32'" },
    { version = "~0.37", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
]
tensorflow-cpu = [
    { version = "~2.15", markers = "sys_platform == 'win32'" },
    { version = "^2.16.1", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
]
keras = [
    { version = "~2", markers = "sys_platform == 'win32'" },
    { version = "^3.3.3", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
